--- a/src/app/standalone/content-leaderboard/content-leaderboard.component.scss
+++ b/src/app/standalone/content-leaderboard/content-leaderboard.component.scss
@@ -9,3 +9,10 @@
 .current-result {
   opacity: 0.7;
 }
+
+:host-context(.theme-dark) .mat-mdc-list-item.primary-variant {
+  --mdc-list-list-item-label-text-color: var(--palette-primary-contrast-200);
+  --mdc-list-list-item-hover-label-text-color: var(
+    --palette-primary-contrast-200
+  );
+}
